--- a/MDK-ARM/Licznik/Licznik.build_log.htm
+++ b/MDK-ARM/Licznik/Licznik.build_log.htm
@@ -3,89 +3,75 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.33.0.0
-Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Jan Bomba, Politechnika Œl¹ska, LIC=----
+IDE-Version: µVision V5.20.0.39
+Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: a a, a, LIC=ATTGK-ZPQ0Q-2L2CT-RQFEI-B5KIH-B4T8E
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.33.0.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 7 (build 960)
-Assembler:       Armasm.exe V5.06 update 7 (build 960)
-Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
-Library Manager: ArmAr.exe V5.06 update 7 (build 960)
-Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
-CPU DLL:         SARMCM3.DLL V5.33.0.0
-Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
-Dialog DLL:      TCM.DLL V1.48.0.0
+Toolchain:       MDK-ARM Plus  Version: 5.15.0
+Toolchain Path:  C:\Keil_arm_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.05 update 2 (build 169)
+Assembler:       Armasm.exe V5.05 update 2 (build 169)
+Linker/Locator:  ArmLink.exe V5.05 update 2 (build 169)
+Library Manager: ArmAr.exe V5.05 update 2 (build 169)
+Hex Converter:   FromElf.exe V5.05 update 2 (build 169)
+CPU DLL:         SARMCM3.DLL V5.15.0
+Dialog DLL:      DCM.DLL V1.13.2.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.15.0_KEIL
+Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
-D:\Jan\ARM\STM3210E-Temperature-Controller\MDK-ARM\Licznik.uvprojx
-Project File Date:  05/23/2021
+D:\ARM\BombaJonik\Projekt\STM3210E-Temperature-Controller\MDK-ARM\Licznik.uvprojx
+Project File Date:  12/09/2022
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_arm_v5\ARM\ARMCC\Bin'
 Build target 'Licznik'
-compiling stm32f1xx_it.c...
+assembling startup_stm32f103xe.s...
 compiling main.c...
-../Core/Src/main.c(124): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  	snprintf(temp_zad, 20, "Temp. Zad. : %.1f*C   ", licznik);
-../Core/Src/main.c(136): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  			snprintf(temp_zad, 20, "Temp. Zad. : %.1f*C   ", licznik);
-../Core/Src/main.c(146): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  			snprintf(temp_zad, 20, "Temp. Zad. : %.1f*C   ", licznik);
-../Core/Src/main.c(152): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  			snprintf(temp_akt, 20, "Temp. Akt. : %.1f*C     ", temperatura_C);
-../Core/Src/main.c: 4 warnings, 0 errors
+compiling lcd.c...
+compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_msp.c...
-compiling lcd.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_adc.c...
+compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_adc_ex.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_sram.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_ll_fsmc.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_sram.c...
+compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_tim.c...
 compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_tim_ex.c...
 linking...
-Program Size: Code=11948 RO-data=4920 RW-data=76 ZI-data=1292  
+Program Size: Code=18266 RO-data=5098 RW-data=56 ZI-data=1896  
 FromELF: creating hex file...
-"Licznik\Licznik.axf" - 0 Error(s), 4 Warning(s).
+"Licznik\Licznik.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.7.0.pack
-                ARM.CMSIS.5.7.0
+                http://www.keil.com/pack/ARM.CMSIS.5.0.0-Beta12.pack
+                ARM::CMSIS:CORE:5.0.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.4.0
-
-Package Vendor: Keil
-                http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.3.0.pack
-                Keil.STM32F1xx_DFP.2.3.0
-                STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
+   * Component: CORE Version: 5.0.0
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_Licznik
-  C:\Users\Jan\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  C:\Users\Jan\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  D:\ARM\BombaJonik\Projekt\STM3210E-Temperature-Controller\MDK-ARM\RTE
+  C:\Keil_arm_v5\ARM\PACK\ARM\CMSIS\5.0.0-Beta12\CMSIS\Include
+  C:\Keil_arm_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.4.0
-      Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:10
+   * Component: ARM::CMSIS:CORE:5.0.0
+Build Time Elapsed:  00:00:20
 </pre>
 </body>
 </html>
