--- a/MDK-ARM/Licznik/Licznik.build_log.htm
+++ b/MDK-ARM/Licznik/Licznik.build_log.htm
@@ -3,75 +3,107 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.20.0.39
-Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: a a, a, LIC=ATTGK-ZPQ0Q-2L2CT-RQFEI-B5KIH-B4T8E
+IDE-Version: µVision V5.38.0.0
+Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information:  ,  , LIC=----
  
 Tool Versions:
-Toolchain:       MDK-ARM Plus  Version: 5.15.0
-Toolchain Path:  C:\Keil_arm_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.05 update 2 (build 169)
-Assembler:       Armasm.exe V5.05 update 2 (build 169)
-Linker/Locator:  ArmLink.exe V5.05 update 2 (build 169)
-Library Manager: ArmAr.exe V5.05 update 2 (build 169)
-Hex Converter:   FromElf.exe V5.05 update 2 (build 169)
-CPU DLL:         SARMCM3.DLL V5.15.0
-Dialog DLL:      DCM.DLL V1.13.2.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.15.0_KEIL
-Dialog DLL:      TCM.DLL V1.14.5.0
+Toolchain:       MDK-Lite  Version: 5.38.0.0
+Toolchain Path:  C:\Programy\Keil_v5\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.19
+Assembler:       Armasm.exe V6.19
+Linker/Locator:  ArmLink.exe V6.19
+Library Manager: ArmAr.exe V6.19
+Hex Converter:   FromElf.exe V6.19
+CPU DLL:         SARMCM3.DLL V5.38.0.0
+Dialog DLL:      DCM.DLL V1.17.5.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
+Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\ARM\BombaJonik\Projekt\STM3210E-Temperature-Controller\MDK-ARM\Licznik.uvprojx
-Project File Date:  12/09/2022
+D:\Dokumenty\Uczelnia\Semestr_9\ARM\Projekt\STM3210E-Temperature-Controller\MDK-ARM\Licznik.uvprojx
+Project File Date:  12/28/2022
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_arm_v5\ARM\ARMCC\Bin'
-Build target 'Licznik'
+*** Using Compiler 'V6.19', folder: 'C:\Programy\Keil_v5\ARM\ARMCLANG\Bin'
+Rebuild target 'Licznik'
 assembling startup_stm32f103xe.s...
-compiling main.c...
-compiling lcd.c...
-compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_adc.c...
-compiling stm32f1xx_hal.c...
+../Core/Src/main.c(141): warning: passing 'char[21]' to parameter of type 'unsigned char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
+        LCD_DisplayStringLine(Line0, Title1);
+                                     ^~~~~~
+../Core/Src/main.c(40): note: expanded from macro 'Title1'
+#define Title1 "       SYSTEM       "
+               ^~~~~~~~~~~~~~~~~~~~~~
+../Core/Inc\lcd.h(182): note: passing argument to parameter 'ptr' here
+void LCD_DisplayStringLine(unsigned char Line, unsigned char *ptr);
+                                                              ^
+../Core/Src/main.c(142): warning: passing 'char[21]' to parameter of type 'unsigned char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
+        LCD_DisplayStringLine(Line1, Title2);
+                                     ^~~~~~
+../Core/Src/main.c(41): note: expanded from macro 'Title2'
+#define Title2 "     OGRZEWANIA     "
+               ^~~~~~~~~~~~~~~~~~~~~~
+../Core/Inc\lcd.h(182): note: passing argument to parameter 'ptr' here
+void LCD_DisplayStringLine(unsigned char Line, unsigned char *ptr);
+                                                              ^
+2 warnings generated.
+compiling main.c...
+compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_adc_ex.c...
+compiling stm32f1xx_hal_adc.c...
+../Core/Src/lcd.c(169): warning: passing 'char[21]' to parameter of type 'unsigned char *' converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
+  LCD_DisplayStringLine(Line, "                    ");
+                              ^~~~~~~~~~~~~~~~~~~~~~
+../Core/Inc\lcd.h(182): note: passing argument to parameter 'ptr' here
+void LCD_DisplayStringLine(unsigned char Line, unsigned char *ptr);
+                                                              ^
+1 warning generated.
+compiling lcd.c...
+compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_ll_fsmc.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_ll_fsmc.c...
+compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_sram.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_tim.c...
-compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=18266 RO-data=5098 RW-data=56 ZI-data=1896  
+Program Size: Code=20872 RO-data=5160 RW-data=20 ZI-data=1940  
 FromELF: creating hex file...
-"Licznik\Licznik.axf" - 0 Error(s), 0 Warning(s).
+"Licznik\Licznik.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.0.0-Beta12.pack
-                ARM::CMSIS:CORE:5.0.0
-                CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.0.0
+                http://www.keil.com/pack/ARM.CMSIS.5.9.0.pack
+                ARM.CMSIS.5.9.0
+                CMSIS (Common Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.6.0
+
+Package Vendor: Keil
+                http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.4.0.pack
+                Keil.STM32F1xx_DFP.2.4.0
+                STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  D:\ARM\BombaJonik\Projekt\STM3210E-Temperature-Controller\MDK-ARM\RTE
-  C:\Keil_arm_v5\ARM\PACK\ARM\CMSIS\5.0.0-Beta12\CMSIS\Include
-  C:\Keil_arm_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0\Device\Include
+  ./RTE/_Licznik
+  C:/Users/marci/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+  C:/Users/marci/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:20
+   * Component: ARM::CMSIS:CORE:5.6.0
+      Include file:  CMSIS/Core/Include/tz_context.h
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
